Добавил сетку на список отелей

--- a/hotels.html
+++ b/hotels.html
@@ -104,58 +104,88 @@
                    </section>
                    <ul class="hotels-list">
                        <li class="hotels-item">
-                           <img src="img/hotel-amara-resort-and-spa.jpg" height="90" width="135" alt="Гостиница Amara Resort & Spa">
-                           <h3 class="hotel-name">
-                               <a class="hotel-link" href="hotel-amara-resort-and-spa.html">Amara Resort & Spa</a>
-                           </h3>
-                           <p class="hotel-type">Гостиница</p>
-                           <p class="hotel-price">от 4000</p>
-                           <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
-                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                           <div class="rating rating-stars">
-                               <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
-                               <img src="img/star.svg" alt="">
-                               <img src="img/star.svg" alt="">
-                               <img src="img/star.svg" alt="">
+                            <div class="hotels-item-main-wrapper">
+                               <div class="hotels-item-wrapper">
+                                   <img src="img/hotel-amara-resort-and-spa.jpg" class="hotel-image" height="90" width="135" alt="Гостиница Amara Resort & Spa">
+                                   <div class="hotels-item-text-btns-wrapper">
+                                       <h3 class="hotel-name">
+                                           <a class="hotel-link" href="hotel-amara-resort-and-spa.html">Amara Resort & Spa</a>
+                                       </h3>
+                                       <div class="hotels-item-text-wrapper">
+                                           <p class="hotel-type">Гостиница</p>
+                                           <p class="hotel-price">от 4000</p>
+                                       </div>
+                                       <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
+                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                  </div>
+                               </div>
+                               <div class="rating-wrapper">
+                                   <div class="rating rating-stars">
+                                       <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
+                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" alt="">
+                                   </div>
+                                   <p class="raing rating-number">
+                                       Рейтинг: 8.5
+                                   </p>
+                               </div>
                            </div>
-                           <p class="raing rating-number">
-                               Рейтинг: 8.5
-                           </p>
                        </li>
                        <li class="hotels-item">
-                           <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
-                           <h3 class="hotel-name">
-                               <a class="hotel-link" href="hotel-desert-quail-inn.html">Desert Quail Inn</a>
-                           </h3>
-                           <p class="hotel-type">Мотель</p>
-                           <p class="hotel-price">от 3000</p>
-                           <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
-                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                           <div class="rating rating-stars">
-                               <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
-                               <img src="img/star.svg" alt="">
-                               <img src="img/star.svg" alt="">
+                           <div class="hotels-item-main-wrapper">
+                               <div class="hotels-item-wrapper">
+                                   <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
+                                   <div class="hotels-item-text-btns-wrapper">
+                                       <h3 class="hotel-name">
+                                           <a class="hotel-link" href="hotel-desert-quail-inn.html">Desert Quail Inn</a>
+                                       </h3>
+                                       <div class="hotels-item-text-wrapper">
+                                           <p class="hotel-type">Мотель</p>
+                                           <p class="hotel-price">от 3000</p>
+                                       </div>
+                                       <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
+                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                   </div>
+                               </div>
+                               <div class="rating-wrapper">
+                                   <div class="rating rating-stars">
+                                       <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
+                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" alt="">
+                                   </div>
+                                   <p class="raing rating-number">
+                                       Рейтинг: 8.9
+                                   </p>
+                               </div>
                            </div>
-                           <p class="raing rating-number">
-                               Рейтинг: 8.9
-                           </p>
                        </li>
                        <li class="hotels-item">
-                           <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
-                           <h3 class="hotel-name">
-                               <a class="hotel-link" href="hotel-villas-at-poco-diablo.html">Villas At Poco Diablo</a>
-                           </h3>
-                           <p class="hotel-type">Апартаменты</p>
-                           <p class="hotel-price">от 2000</p>
-                           <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
-                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                           <div class="rating rating-stars">
-                               <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
-                               <img src="img/star.svg" alt="">
+                           <div class="hotels-item-main-wrapper">
+                               <div class="hotels-item-wrapper">
+                                   <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
+                                   <div class="hotels-item-text-btns-wrapper">
+                                       <h3 class="hotel-name">
+                                           <a class="hotel-link" href="hotel-villas-at-poco-diablo.html">Villas At Poco Diablo</a>
+                                       </h3>
+                                       <div class="hotels-item-text-wrapper">
+                                           <p class="hotel-type">Апартаменты</p>
+                                           <p class="hotel-price">от 2000</p>
+                                       </div>
+                                       <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
+                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                   </div>
+                               </div>
+                               <div class="rating-wrapper">
+                                   <div class="rating rating-stars">
+                                       <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
+                                       <img src="img/star.svg" alt="">
+                                   </div>
+                                   <p class="raing rating-number">
+                                       Рейтинг: 9.2
+                                   </p>
+                               </div>
                            </div>
-                           <p class="raing rating-number">
-                               Рейтинг: 9.2
-                           </p>
                        </li>
                    </ul>
                </section>
