--- a/hotels.html
+++ b/hotels.html
@@ -85,12 +85,12 @@
                    <h2 class="visually-hidden">Список гостиниц</h2>
                    <section class="sorting">
                        <h3 class="visually-hidden">Сортировка гостиниц</h3>
-                       <div class="number-of-hotels-wrapper">
-                          <label for="number-of-hotels-field">Найдено:</label>
-                          <output class="number-of-hotels-input" name="number-of-hotels-input" id="number-of-hotels-field"></output>
-                          <p class="sorting-text">Сортировка:</p>
-                        </div>
                         <div class="sorting-wrapper">
+                            <p class="number-of-hotels">
+                                Найдено:
+                                <output class="number-of-hotels-input" name="number-of-hotels-input" id="number-of-hotels-field"></output>
+                            </p>
+                            <p class="sorting-text">Сортировка:</p>
                             <ul class="sorting-list">
                                 <li class="sorting-item"><a class="sorting-link" href="#">По цене</a></li>
                                 <li class="sorting-item"><a class="sorting-link" href="#">По типу</a></li>
@@ -115,8 +115,10 @@
                                            <p class="hotel-type">Гостиница</p>
                                            <p class="hotel-price">от 4000</p>
                                        </div>
-                                       <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
-                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       <div class="hotels-item-btns-wrapper">
+                                           <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
+                                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       </div>
                                   </div>
                                </div>
                                <div class="rating-wrapper">
@@ -144,8 +146,10 @@
                                            <p class="hotel-type">Мотель</p>
                                            <p class="hotel-price">от 3000</p>
                                        </div>
-                                       <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
-                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       <div class="hotels-item-btns-wrapper">
+                                           <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
+                                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       </div>
                                    </div>
                                </div>
                                <div class="rating-wrapper">
@@ -172,8 +176,10 @@
                                            <p class="hotel-type">Апартаменты</p>
                                            <p class="hotel-price">от 2000</p>
                                        </div>
-                                       <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
-                                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       <div class="hotels-item-btns-wrapper">
+                                           <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
+                                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                                       </div>
                                    </div>
                                </div>
                                <div class="rating-wrapper">
